res_syntax/tests/parsing/errors/other/expected/regionMissingComma.res.txt

  Syntax error!
  tests/parsing/errors/other/regionMissingComma.res:2:31

  1 │ external make: (
  2 │   ~style: ReactDOMRe.Style.t=?.
  3 │   ~image: bool=?,
  4 │ ) => React.element = "ModalContent"

  Did you forget a `,` here?


  Syntax error!
  tests/parsing/errors/other/regionMissingComma.res:8:11-9:11

   6 │ type student<'extraInfo> = {
   7 │   name: string,
   8 │   age: int
   9 │   otherInfo: 'extraInfo
  10 │ }
  11 │ 

  Did you forget a `,` here?

external make :
  ?style:((ReactDOMRe.Style.t)[@ns.namedArgLoc ]) ->
    (?image:((bool)[@ns.namedArgLoc ]) -> React.element) Js.Fn.arity1 =
    "ModalContent"
type nonrec 'extraInfo student =
  {
  name: string ;
  age: int ;
  otherInfo: 'extraInfo }